--- a/create_vs.yml
+++ b/create_vs.yml
@@ -55,6 +55,9 @@
       debug:
         msg: "The VIP (Virtual IP) is https://{{ansible_host}}"
         
+    - debug:
+        msg: "{{ twr_var_f5_key }}" "{{ twr_var_f5_cert }}"
+        
     - name: Create - Certificate and Key Pairs
       bigip_ssl_key_cert:
         key_content:  "{{ lookup('file', twr_var_f5_key) }}"
